pruebas pagina final

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                 </button>
 
                 <div class="navbar-collapse collapse " id="navbarSupportedContent">
-                    <ul class="navbar-nav nav-fill w-100">
-                        <li class="nav-item ">
+                    <ul class="navbar-nav nav-fill w-100 ">
+                        <li class="nav-item botonFormMenu">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
 
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown botonFormMenu">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" aria-expanded="false"
                                 href="pages/services.html">
                                 Servicios
@@ -53,16 +53,16 @@
                                 <li><a class="dropdown-item" href="pages/services.html">Casamientos</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/gallery.html">Galeria</a></a>
+                        <li class="nav-item ">
+                            <a class="nav-link botonFormMenu" href="pages/gallery.html">Galeria</a></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/aboutus.html">Nosotros</a></a>
+                            <a class="nav-link botonFormMenu" href="pages/aboutus.html">Nosotros</a></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/reviews.html">Opiniones</a></a>
+                            <a class="nav-link botonFormMenu" href="pages/reviews.html">Opiniones</a></a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item botonFormMenu">
                             <a class="nav-link" href="pages/contacto.html">Contacto</a></a>
                         </li>
                     </ul>
@@ -90,25 +90,23 @@
         <!-- #region footer-->
         <footer class="footerInit">
             <div class="footerIcons">
-                <a href="pages/contacto.html" target="_blank">
-                    <img src="img/icoEmail.svg" alt="Correo" width="24" height="24">
+                <a href="../pages/contacto.html" target="_blank">
+                    <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
                 </a>
                 <a href="https://es-la.facebook.com/" target="_blank">
-                    <img src="img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
+                    <img src="../img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
                 </a>
                 <a href="https://www.instagram.com/" target="_blank">
-                    <img src="img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
+                    <img src="../img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
                 </a>
                 <a href="https://web.whatsapp.com/" target="_blank">
-                    <img src="img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
+                    <img src="../img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
                 </a>
                 <a href="https://twitter.com/?lang=es" target="_blank">
-                    <img src="img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
+                    <img src="../img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
                 </a>
             </div>
-            <h3>
-                Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
-            </h3>
+            <h3 class="footerCopyright">Todos los derechos reservado © Galimberti Flavio</h3>
         </footer>
 
     </div>
