--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -152,9 +152,7 @@
                     <img src="../img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
                 </a>
             </div>
-            <h3>
-                Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
-            </h3>
+            <h3 class="footerCopyright">Todos los derechos reservado © Galimberti Flavio</h3>
         </footer>
     </div>
     <!-- link de js bt-->
