--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -42,16 +42,14 @@
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="../pages/services.html" id="navbarDropdown" role="button"
-                aria-expanded="false">
-                Servicios
-              </a>
+                aria-expanded="false">Servicios</a>
               <!---data-bs-toggle="dropdown"-->
               <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
                 <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
                 <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
                 <li><a class="dropdown-item" href="../pages/services.html">Casamientos</a></li>
-            </ul>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Galeria</a></a>
@@ -156,7 +154,7 @@
         <img class="itemImage" src="../img/fiesta4.webp" alt="Evento Kids 2022-Marzo">
         <p class="itemInfo">Evento Kids 2022 Marzo</p>
       </div>
-      
+
     </main>
 
 
@@ -164,26 +162,24 @@
     <!-- #region footer-->
     <footer class="footerInit">
       <div class="footerIcons">
-        <a href="../pages/contacto.html" target="_blank">
-          <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
-        </a>
-        <a href="https://es-la.facebook.com/" target="_blank">
-          <img src="../img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
-        </a>
-        <a href="https://www.instagram.com/" target="_blank">
-          <img src="../img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
-        </a>
-        <a href="https://web.whatsapp.com/" target="_blank">
-          <img src="../img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
-        </a>
-        <a href="https://twitter.com/?lang=es" target="_blank">
-          <img src="../img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
-        </a>
+          <a href="../pages/contacto.html" target="_blank">
+              <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
+          </a>
+          <a href="https://es-la.facebook.com/" target="_blank">
+              <img src="../img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
+          </a>
+          <a href="https://www.instagram.com/" target="_blank">
+              <img src="../img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
+          </a>
+          <a href="https://web.whatsapp.com/" target="_blank">
+              <img src="../img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
+          </a>
+          <a href="https://twitter.com/?lang=es" target="_blank">
+              <img src="../img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
+          </a>
       </div>
-      <h3>
-        Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
-      </h3>
-    </footer>
+      <h3 class="footerCopyright">Todos los derechos reservado © Galimberti Flavio</h3>
+  </footer>
 
   </div>
   <!-- link de js bt-->
