pagina final detalles correccion

--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
                     ></iframe>
             </div>
             <div class="mainInitP">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam repellat minus error accusamus
-                    consequatur labore at, laboriosam earum harum dignissimos nam sed fugit beatae asperiores, deleniti
-                    doloremque numquam. Earum, dolores.</p>
+                <p>Si estás planeando una fiesta y/o evento hacia tu
+                    fiesta, y todavía no definiste nada, te 
+                    acompañamos para encontrar todo lo necesario!
+                </p>
+                <p>Necesitas un servicio de catering a medida??
+                    Tenemos la solución!!
+                </p>
             </div>
 
         </main>
