--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -79,19 +79,10 @@
             </div>
             <h2 class="mainAboutUsH2">Conoce nuestra empresa</h2>
             <p class="mainAboutUsP">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae nostrum nihil dolores soluta, quas,
-                aliquam
-                exercitationem asperiores, consequatur obcaecati veniam vitae! Praesentium iste similique, blanditiis
-                fugiat
-                vitae assumenda molestiae libero.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae nostrum nihil dolores soluta, quas,
-                aliquam
-                exercitationem asperiores, consequatur obcaecati veniam vitae! Praesentium iste similique, blanditiis
-                fugiat
-                vitae assumenda molestiae libero.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo qui odio ut ipsum officia numquam odit
-                laborum dolor nostrum, fugiat cumque non, debitis fugit facilis eligendi corporis ducimus exercitationem
-                asperiores.
+                Somos un grupo especial de personas que se abocan a resolver problemas
+                asociados al indole de eventos.
+                Conformados hace menos de un año, buscamos el expertise en cada aspecto, y 
+                lograr brindar a la mejor experiencia
             </p>
         </main>
 
