pagina final detalles correccion

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -51,10 +51,10 @@
                             </a>
                             <!---data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html">Casamientos</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionBodasg">Casamientos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -83,6 +83,12 @@
                 asociados al indole de eventos.
                 Conformados hace menos de un año, buscamos el expertise en cada aspecto, y 
                 lograr brindar a la mejor experiencia
+                Cuidamos hasta el último detalle
+                
+Convertimos tu 
+visión en realidad
+
+Hacemos realidad cualquier sueño
             </p>
         </main>
 
