--- a/pages/services.html
+++ b/pages/services.html
@@ -48,10 +48,10 @@
                             </a>
                             <!---data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Eventos Infantes</a></li>
-                                <li><a class="dropdown-item" href="#">Eventos Corporativos</a></li>
-                                <li><a class="dropdown-item" href="#">Cattering</a></li>
-                                <li><a class="dropdown-item" href="#">Casamientos</a></li>
+                                <li><a class="dropdown-item" href="#sectionKids">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="#sectionCorporative">Eventos Corporativos</a></li>
+                                <li><a class="dropdown-item" href="#sectionCattering">Cattering</a></li>
+                                <li><a class="dropdown-item" href="#sectionBodasg">Casamientos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -73,46 +73,61 @@
 
 
         <main class="mainServices">
-            <div class="eventCard eventKids">
-                <div class="eventImage"></div>
-                <a href="">
-                    <div class="eventImage--hover"></div>
-                </a>
-                <div clase="eventInfo">
-                    <h3 class="eventName">Eventos Infantiles</h3>
-                    <p>Lorem ipsum dolor </p>
+            <section class="serviceSelection">
+                <div class="eventCard eventKids">
+                    <div class="eventImage"></div>
+                    <a href="#sectionKids">
+                        <div class="eventImage--hover"></div>
+                    </a>
+                    <div clase="eventInfo">
+                        <h3 class="eventName">Eventos Infantiles</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="eventCard eventCorporative ">
-                <div class="eventImage"></div>
-                <a href="">
-                    <div class="eventImage--hover"></div>
-                </a>
-                <div clase="eventInfo">
-                    <h3 class="eventName">Eventos Corporativos</h3>
-                    <p>Lorem ipsum dolor </p>
+                <div class="eventCard eventCorporative ">
+                    <div class="eventImage"></div>
+                    <a href="#sectionCorporative">
+                        <div class="eventImage--hover"></div>
+                    </a>
+                    <div clase="eventInfo">
+                        <h3 class="eventName">Eventos Corporativos</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="eventCard eventCattering">
-                <div class="eventImage"></div>
-                <a href="">
-                    <div class="eventImage--hover"></div>
-                </a>
-                <div clase="eventInfo">
-                    <h3 class="eventName">Cattering</h3>
-                    <p>Lorem ipsum dolor </p>
+                <div class="eventCard eventCattering">
+                    <div class="eventImage"></div>
+                    <a href="#sectionCattering">
+                        <div class="eventImage--hover"></div>
+                    </a>
+                    <div clase="eventInfo">
+                        <h3 class="eventName">Cattering</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="eventCard eventBodas">
-                <div class="eventImage"></div>
-                <a href="">
-                    <div class="eventImage--hover"></div>
-                </a>
-                <div clase="eventInfo">
-                    <h3 class="eventName">Bodas</h3>
-                    <p>Lorem ipsum dolor </p>
+                <div class="eventCard eventBodas">
+                    <div class="eventImage"></div>
+                    <a href="#sectionBodas">
+                        <div class="eventImage--hover"></div>
+                    </a>
+                    <div clase="eventInfo">
+                        <h3 class="eventName">Bodas</h3>
+                    </div>
                 </div>
-            </div>
+            </section>
+
+            <section id="sectionKids" class="sectionClass">
+                <h2>Eventos Infantiles</h2>
+                <p>Lorem</p>
+            </section>
+            <section id="sectionCorporative" class="sectionClass">
+                <h2>Eventos Corporativos</h2>
+                <p>Lorem</p>
+            </section>
+            <section id="sectionCattering" class="sectionClass">
+                <h2>Cattering</h2>
+                <p>Lorem</p>
+            </section>
+            <section id="sectionBodas" class="sectionClass">
+                <h2>Bodas</h2>
+                <p>Lorem</p>
+            </section>
         </main>
 
 
