--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                             </a>
                             <!--data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="pages/services.html">Eventos Infantes</a></li>
-                                <li><a class="dropdown-item" href="pages/services.html">Eventos Corporativos</a></li>
-                                <li><a class="dropdown-item" href="pages/services.html">Cattering</a></li>
-                                <li><a class="dropdown-item" href="pages/services.html">Casamientos</a></li>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionKids">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionCattering">Cattering</a></li>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionBodasg">Casamientos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item ">
@@ -72,16 +72,24 @@
 
         <!--contenido principal-->
         <main class="mainInit">
-            <div class="mainInitVideo">
-                <iframe class="mainInitVideo" src="https://www.youtube.com/embed/3ztNWv3OpuQ"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
-                     picture-in-picture"
-                    ></iframe>
+
+            <div class="mainInitVideo" id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100 imagencita" src="img/background3.png" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100 imagencita" src="img/background2.png" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100 imagencita" src="img/fiesta1.jpg" alt="Third slide">
+                    </div>
+                </div>
             </div>
+            
             <div class="mainInitP">
                 <p>Si estás planeando una fiesta y/o evento hacia tu
-                    fiesta, y todavía no definiste nada, te 
+                    fiesta, y todavía no definiste nada, te
                     acompañamos para encontrar todo lo necesario!
                 </p>
                 <p>Necesitas un servicio de catering a medida??
