--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -45,10 +45,10 @@
                 aria-expanded="false">Servicios</a>
               <!---data-bs-toggle="dropdown"-->
               <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
-                <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
-                <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
-                <li><a class="dropdown-item" href="../pages/services.html">Casamientos</a></li>
+                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionBodasg">Casamientos</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -70,40 +70,64 @@
 
 
     <main class="mainGalleryCarousel">
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label=""></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label=""></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label=""></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label=""></button>
+            aria-current="true" aria-label="Imagen1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Imagen 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Imagen 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Imagen 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Imagen 5"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Imagen 6"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Imagen 7"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Imagen 8"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../img/fiesta1.jpg" class="d-block w-100" alt="Evento Kids 2020-Mayo">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Kids</h5>
+          <div class="carousel-item active" data-bs-interval="3000">
+            <img src="../img/fiesta1.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Kids 2020-Mayo">
+            <div class="carousel-caption d-md-block itemInfoCarousel">
               <p>Evento Kids 2020-Mayo</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="../img/fiesta2.jpeg" class="d-block w-100" alt="Evento Corporativo 2021-Julio">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Corporative</h5>
+          <div class="carousel-item"data-bs-interval="3000">
+            <img src="../img/fiesta2.jpeg" class="d-block w-100 itemImageCarousel" alt="Evento Corporativo 2021-Julio">
+            <div class="carousel-caption d-md-block itemInfoCarousel">
               <p>Evento Corporativo 2021-Julio</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="../img/fiesta3.jpg" class="d-block w-100" alt="Evento Cattering 2021-Octubre">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Cattering</h5>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="../img/fiesta3.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Cattering 2021-Octubre">
+            <div class="carousel-caption d-md-block itemInfoCarousel">
               <p>Evento Cattering 2021-Octubre</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="../img/fiesta4.webp" class="d-block w-100" alt="Evento Kids 2022-Marzo">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Kids</h5>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="../img/fiesta4.webp" class="d-block w-100 itemImageCarousel" alt="Evento Kids 2022-Marzo">
+            <div class="carousel-caption d-md-block itemInfoCarousel">
+              <p>Evento Kids 2022-Marzo</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="../img/fiesta1.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Kids 2020-Mayo">
+            <div class="carousel-caption d-md-block itemInfoCarousel">
+              <p>Evento Kids 2020-Mayo</p>
+            </div>
+          </div>
+          <div class="carousel-item"data-bs-interval="3000">
+            <img src="../img/fiesta2.jpeg" class="d-block w-100 itemImageCarousel" alt="Evento Corporativo 2021-Julio">
+            <div class="carousel-caption d-md-block itemInfoCarousel">
+              <p>Evento Corporativo 2021-Julio</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="../img/fiesta3.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Cattering 2021-Octubre">
+            <div class="carousel-caption d-md-block itemInfoCarousel">
+              <p>Evento Cattering 2021-Octubre</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="../img/fiesta4.webp" class="d-block w-100 itemImageCarousel" alt="Evento Kids 2022-Marzo">
+            <div class="carousel-caption d-md-block itemInfoCarousel">
               <p>Evento Kids 2022-Marzo</p>
             </div>
           </div>
