--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -47,10 +47,10 @@
                             </a>
                             <!---data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html">Casamientos</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionBodasg">Casamientos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
