pagina final detalles correccion

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -46,9 +46,10 @@
               <!---data-bs-toggle="dropdown"-->
               <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantes</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionBodasg">Casamientos</a></li>
+                <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a>
+                </li>
+                <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
+                <li><a class="dropdown-item" href="../pages/services.html#sectionBodasg">Casamientos</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -74,13 +75,20 @@
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Imagen1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Imagen 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Imagen 3"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Imagen 4"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Imagen 5"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Imagen 6"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Imagen 7"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Imagen 8"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Imagen 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Imagen 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+            aria-label="Imagen 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+            aria-label="Imagen 5"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+            aria-label="Imagen 6"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+            aria-label="Imagen 7"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7"
+            aria-label="Imagen 8"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
@@ -89,7 +97,7 @@
               <p>Evento Kids 2020-Mayo</p>
             </div>
           </div>
-          <div class="carousel-item"data-bs-interval="3000">
+          <div class="carousel-item" data-bs-interval="3000">
             <img src="../img/fiesta2.jpeg" class="d-block w-100 itemImageCarousel" alt="Evento Corporativo 2021-Julio">
             <div class="carousel-caption d-md-block itemInfoCarousel">
               <p>Evento Corporativo 2021-Julio</p>
@@ -113,7 +121,7 @@
               <p>Evento Kids 2020-Mayo</p>
             </div>
           </div>
-          <div class="carousel-item"data-bs-interval="3000">
+          <div class="carousel-item" data-bs-interval="3000">
             <img src="../img/fiesta2.jpeg" class="d-block w-100 itemImageCarousel" alt="Evento Corporativo 2021-Julio">
             <div class="carousel-caption d-md-block itemInfoCarousel">
               <p>Evento Corporativo 2021-Julio</p>
@@ -186,24 +194,24 @@
     <!-- #region footer-->
     <footer class="footerInit">
       <div class="footerIcons">
-          <a href="../pages/contacto.html" target="_blank">
-              <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
-          </a>
-          <a href="https://es-la.facebook.com/" target="_blank">
-              <img src="../img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-              <img src="../img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
-          </a>
-          <a href="https://web.whatsapp.com/" target="_blank">
-              <img src="../img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
-          </a>
-          <a href="https://twitter.com/?lang=es" target="_blank">
-              <img src="../img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
-          </a>
+        <a href="../pages/contacto.html" target="_blank">
+          <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
+        </a>
+        <a href="https://es-la.facebook.com/" target="_blank">
+          <img src="../img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
+        </a>
+        <a href="https://www.instagram.com/" target="_blank">
+          <img src="../img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
+        </a>
+        <a href="https://web.whatsapp.com/" target="_blank">
+          <img src="../img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
+        </a>
+        <a href="https://twitter.com/?lang=es" target="_blank">
+          <img src="../img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
+        </a>
       </div>
       <h3 class="footerCopyright">Todos los derechos reservado © Galimberti Flavio</h3>
-  </footer>
+    </footer>
 
   </div>
   <!-- link de js bt-->
