--- a/pages/services.html
+++ b/pages/services.html
@@ -25,8 +25,8 @@
                     <h1 class="headerLogoTitle">EVENTOS</h1>
                 </div>
             </a>
-        </header>
-        <nav class="navbar navbar-expand-sm menu">
+        </header><!--sticky-top-->
+        <nav class="navbar   navbar-expand-sm menu">
             <div class="container">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -131,7 +131,7 @@
         </main>
 
 
-        <!-- #region footer-->
+        <!-- #region footerfixed-bottom-->
         <footer class="footerInit">
             <div class="footerIcons">
                 <a href="../pages/contacto.html" target="_blank">
