pagina final detalles correccion

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,7 +52,7 @@
                                 <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantes</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionBodasg">Casamientos</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionBodas">Casamientos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
