--- a/pages/services.html
+++ b/pages/services.html
@@ -51,7 +51,7 @@
                                 <li><a class="dropdown-item" href="#sectionKids">Eventos Infantes</a></li>
                                 <li><a class="dropdown-item" href="#sectionCorporative">Eventos Corporativos</a></li>
                                 <li><a class="dropdown-item" href="#sectionCattering">Cattering</a></li>
-                                <li><a class="dropdown-item" href="#sectionBodasg">Casamientos</a></li>
+                                <li><a class="dropdown-item" href="#sectionBodas">Casamientos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
