--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!--contenido principal-->
         <main class="mainInit">
 
-            <div class="mainInitVideo" id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <!--<div class="mainInitVideo" id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100 imagencita" src="img/background3.png" alt="First slide">
@@ -85,7 +85,58 @@
                         <img class="d-block w-100 imagencita" src="img/fiesta1.jpg" alt="Third slide">
                     </div>
                 </div>
-            </div>
+            </div> -->
+            <main class="mainInitVideo">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                      aria-current="true" aria-label="Imagen1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                      aria-label="Imagen 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                      aria-label="Imagen 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                      aria-label="Imagen 4"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="3000">
+                        <img src="img/background3.png" class="d-block w-100 itemImageInicio">
+                      <div class="carousel-caption d-md-block itemInfoInicio">
+                        <p>No sabes donde y cuando</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="img/background3.png" class="d-block w-100 itemImageInicio">
+                      <div class="carousel-caption d-md-block itemInfoCarousel">
+                        <p>No sabes donde y cuando</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="img/background3.png" class="d-block w-100 itemImageInicio">
+                      <div class="carousel-caption d-md-block itemInfoInicio">
+                        <p>No sabes donde y cuando</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="img/background3.png" class="d-block w-100 itemImageInicio">
+                      <div class="carousel-caption d-md-block itemInfoInicio">
+                        <p>No sabes donde y cuando</p>
+                      </div>
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </main>
+          
             
             <div class="mainInitP">
                 <p>Si estás planeando una fiesta y/o evento hacia tu
