--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -49,7 +49,7 @@
                 <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a>
                 </li>
                 <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
-                <li><a class="dropdown-item" href="../pages/services.html#sectionBodasg">Casamientos</a></li>
+                <li><a class="dropdown-item" href="../pages/services.html#sectionBodas">Casamientos</a></li>
               </ul>
             </li>
             <li class="nav-item">
