pagina final detalles correccion

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
                         <img src="img/background3.png" class="d-block w-100 itemImageInicio">
-                      <div class="carousel-caption d-md-block itemInfoCarousel">
+                      <div class="carousel-caption d-md-block itemInfoInicio">
                         <p>No sabes donde y cuando</p>
                       </div>
                     </div>
