--- a/index.html
+++ b/index.html
@@ -88,52 +88,32 @@
             </div> -->
             <main class="mainInitVideo">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                  <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                      aria-current="true" aria-label="Imagen1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                      aria-label="Imagen 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                      aria-label="Imagen 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                      aria-label="Imagen 4"></button>
-                  </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="3000">
-                        <img src="img/background3.png" class="d-block w-100 itemImageInicio">
+                        <img src="img/background3.png" class="d-block  itemImageInicio">
                       <div class="carousel-caption d-md-block itemInfoInicio">
                         <p>No sabes donde y cuando</p>
                       </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="img/background3.png" class="d-block w-100 itemImageInicio">
+                        <img src="img/background3.png" class="d-block  itemImageInicio" alt="">
                       <div class="carousel-caption d-md-block itemInfoInicio">
                         <p>No sabes donde y cuando</p>
                       </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="img/background3.png" class="d-block w-100 itemImageInicio">
+                        <img src="img/background3.png" class="d-block itemImageInicio" alt="">
                       <div class="carousel-caption d-md-block itemInfoInicio">
                         <p>No sabes donde y cuando</p>
                       </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="img/background3.png" class="d-block w-100 itemImageInicio">
+                        <img src="img/background3.png" class="d-block itemImageInicio"alt="" >
                       <div class="carousel-caption d-md-block itemInfoInicio">
                         <p>No sabes donde y cuando</p>
                       </div>
                     </div>
                   </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
                 </div>
               </main>
           
@@ -154,19 +134,19 @@
         <footer class="footerInit">
             <div class="footerIcons">
                 <a href="../pages/contacto.html" target="_blank">
-                    <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
+                    <img src="img/icoEmail.svg" alt="Correo" width="24" height="24">
                 </a>
                 <a href="https://es-la.facebook.com/" target="_blank">
-                    <img src="../img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
+                    <img src="img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
                 </a>
                 <a href="https://www.instagram.com/" target="_blank">
-                    <img src="../img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
+                    <img src="img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
                 </a>
                 <a href="https://web.whatsapp.com/" target="_blank">
-                    <img src="../img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
+                    <img src="img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
                 </a>
                 <a href="https://twitter.com/?lang=es" target="_blank">
-                    <img src="../img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
+                    <img src="img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
                 </a>
             </div>
             <h3 class="footerCopyright">Todos los derechos reservado © Galimberti Flavio</h3>
